--- a/sass/layout/_demo-content.scss
+++ b/sass/layout/_demo-content.scss
@@ -204,3 +204,7 @@
 .site-header .nav-primary .menu-items .menu-item .menu-item .dropdown-toggle {
   color: $color-links;
 }
+
+.entry-header-demo + .block .container {
+  max-width: $article-max-width;
+}
