--- a/sass/layout/_typography.scss
+++ b/sass/layout/_typography.scss
@@ -122,13 +122,20 @@ h6 {
   color: $color-headings;
   font-family: $font-headings;
   font-weight: $headings-weight;
-  line-height: $line-height-headings;
   margin-top: 2.7rem;
   margin-bottom: 2.7rem;
 
   &:first-child {
     margin-top: 0;
   }
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: $line-height-headings;
 }
 
 // Define heading scales
